fix: fenêtre fin partie mauvais résultat de partie + adaptation version > 16 java